# baex-web-wasm-goobercss

./: .gitignore  README.md  TODOS.md  package-lock.json  package.json  rsbuild.config.ts
archive/: Router.test.ts  TemplateCompiler.ts  WasmBridge.test.ts  types.ts
archive/rust/rust/: Cargo.toml
archive/rust/rust/src/: lib.rs
docs/: api.html  index.html
docs-gen/: api-docs.html  package.json
docs-gen/src/: generator.ts  index.ts  parser.ts  types.ts  validator.ts
docs-wasm/: index.html
examples/counter/: counter.test.ts  main.ts
examples/wasm-bridge/: bridge.test.ts  main.ts
public/: index.html
src/: app.ts  devtools.ts  docs-advanced.ts  docs-examples.ts  index.css  index.ts  main.test.ts  main.ts  style.css  styles.ts  tab-state.ts  table-operations.ts  table-view.ts  vite-env.d.ts
src-legacy/: main.ts
src-legacy/app/: constants.ts  utils.ts  view-grid.ts  view.ts
src-legacy/bridge/: manager.ts
src-legacy/core/: component.ts
src/app/: constants.ts  utils.ts  view-grid.ts
src/bridge/: manager.ts  types.ts
src/components/: accordion-demo.js  tab-bar.js  treeview-demo.js
src/demos/: index.ts
src/framework/: BaseComponent.ts  Component.test.ts  Component.ts  Core.ts  EventBus.test.ts  EventBus.ts  Examples.ts  Functional.ts  HostAPI.ts  Menu.ts  ReactiveState.test.ts  ReactiveState.ts  Router.ts  Signal.ts  TemplateCompiler.test.ts  WasmBridge.ts  WasmLoader.ts  errors.ts  index.ts
src/shell/: constants.ts  main.ts
wasm/: main.zig
wasm-src/: Cargo.toml
wasm-src/src/: actions.rs  dom_engine.rs  ir.rs  lib.rs
wasm/src/: ir.rs  (+1 more)
(+48 files in other folders)
