[package]
name = "wasm-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6"
log = "0.4.32"
tracing = "0.1.44"
tracing-wasm = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["registry", "fmt"] }
